--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Popular Movies</string>
+    <string name="app_name">Popular</string>
+
+    <!-- Strings for the filtering options inside the menu-->
+    <string name="menu_popular">Popular</string>
+    <string name="menu_top_rated">Top Rated</string>
+
 </resources>
