Add connection Error message Add a loading indicator

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="menu_popular">Popular</string>
     <string name="menu_top_rated">Top Rated</string>
 
+    <string name="error_message">An error has occurred.</string>
+
 </resources>
