--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="menu_top_rated">Top Rated</string>
 
     <string name="error_message">An error has occurred.</string>
+    <string name="plot_label">Plot</string>
 
 </resources>
